js262/test/language/statements/variable/arguments-strict-list-repeated.js


/*---
es5id: 12.2.1-32-s
esid: sec-variable-statement
description: >
    arguments as local var identifier defined twice and assigned once
    throws SyntaxError in strict mode
flags: [onlyStrict]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

var arguments, arguments = 42;
